--- a/main.css
+++ b/main.css
@@ -1,30 +1,42 @@
-/* :root {
+ :root {
+--text-color-main: white;
 
-} */
-
+} 
 
 body{
     height: 100vw;
     width: 100vw;
     display: grid;
     grid-area: 
-    "side-bar top-bar top-bar top-bar",
+    "side-bar top-bar top-bar top-bar ",
     "side-bar main-content main-content main-content ";
-    grid-template-columns: 5rem 1fr 1fr 1fr;
-    grid-template-rows: 0.4fr 4fr;
+    grid-template-rows: 1fr 4fr;
+    grid-template-columns: 10rem 1fr 1fr 1fr;
+    
 }
 .side-bar{
     grid-area: side-bar;
-    height: 100vh;
-    width: 5rem;
+    height: 50em;
+    width: 3.5rem;
     background-color: rgb(96, 115, 161);
     position: fixed;
     overflow: hidden;
+    color: var(--text-color-main);
+    border-radius: 10px;
 }
+
+    
 .top-bar {
     grid-area: top-bar;
+   
+
 }
 
 .main-content {
     grid-area: main-content;
+}
+.searchbar{
+    display: flex;
+    justify-content: center;
+
 }
