--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
- :root {
+  :root {
 --text-color-main: white;
 
 } 
@@ -10,19 +10,37 @@ body{
     grid-area: 
     "side-bar top-bar top-bar top-bar ",
     "side-bar main-content main-content main-content ";
-    grid-template-rows: 1fr 4fr;
-    grid-template-columns: 10rem 1fr 1fr 1fr;
+    grid-template-rows: .8fr 4fr;
+    grid-template-columns: 5rem 1fr 1fr 1fr;
     
 }
 .side-bar{
     grid-area: side-bar;
-    height: 50em;
-    width: 3.5rem;
+    height: 100vh;
+    width: 7rem;
     background-color: rgb(96, 115, 161);
     position: fixed;
     overflow: hidden;
     color: var(--text-color-main);
     border-radius: 10px;
+    
+    
+}
+.menuItems{
+    display: flex;
+    width: 20px;
+    gap: 7px;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    padding-top: 20px;
+}
+.menuItems > *{
+    cursor: pointer;
+    
+}
+.side-bar:hover{
+    box-shadow: 2px 18px 65px -8px rgba(0, 0, 0, 0.75);
 }
 
     
@@ -30,13 +48,13 @@ body{
     grid-area: top-bar;
    
 
-}
+} 
 
 .main-content {
     grid-area: main-content;
-}
+} 
 .searchbar{
     display: flex;
     justify-content: center;
 
-}
+} 
