--- a/style.css
+++ b/style.css
@@ -34,7 +34,6 @@ hr{
     gap: .5rem;
     color: var(--font-color);
     padding-top: 1.5rem;
-    padding-bottom: 12px;
 }
 .side-drawer > div:not(:first-child){
     padding-left: 1.5rem;
@@ -130,3 +129,19 @@ hr{
     height: 4vh;
     border: none;
 }
+
+.social-media{
+    color: var(--font-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+/* .social-icons{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    padding-top: 15px;
+    justify-items: center;
+    
+} */
